Refactor FirestoreWorkbenchController to improve error handling and optimize document processing